--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>KantarProductApp</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="assets/Kantar icon.png">
 </head>
 <body>
   <kantar-app></kantar-app>
